--- a/Continents_test.Rmd
+++ b/Continents_test.Rmd
@@ -22,6 +22,7 @@ medcon
 
 # Check the levels
 levels(medcon$Cyanotoxin)
+getwd()
 
 ```
 
@@ -33,13 +34,23 @@ library(ggplot2)
 ```
 
 ```{r}
+medcon_clean <- medcon %>% 
+  mutate(Species = str_replace_all(Species, "^Anabaena$", "Anabaena sp")) %>% 
+  mutate(Species = str_replace_all(Species, "^Anabaena spp$", "Anabaena sp")) %>% 
+  mutate(Species = str_replace_all(Species, "^Microcystis$", "Microcystis sp")) %>% 
+  mutate(Species = str_replace_all(Species, "^Microcystis spp$", "Microcystis sp"))
+medcon_clean
+levels(medcon_clean$Cyanotoxin)
+```
+
+```{r}
 summary(medcon)
 ```
 
 ## Find the unique Species in the Mediterranean basin
 
 ```{r}
-medcon %>% 
+medcon_clean %>% 
   filter(Continent == "Mediterranean") %>% 
   group_by(Species) %>% 
   distinct(Species)
@@ -69,18 +80,18 @@ species_cyanotox_cont
 ##Οι κύριοι παραγωγοί τοξινών στη Μεσόγειο (συνολικά 9) + γράφημα
 
 ```{r}
-main_toxin_producers_MED <- medcon %>%
+main_toxin_producers_MED <- medcon_clean %>%
   filter(Continent == "Mediterranean")%>%
   group_by( Cyanotoxin, Species)%>%
   summarize(Number_of_records = n())%>%
   arrange(desc(Number_of_records))
 main_toxin_producers_MED
 
-head(main_toxin_producers_MED, 9)
+head(main_toxin_producers_MED, 6)
 
 
 main_toxin_producers_MED_plot <- 
-  ggplot(head(main_toxin_producers_MED,9), 
+  ggplot(head(main_toxin_producers_MED,6), 
          aes(x = reorder(Species, -Number_of_records), 
              y = Number_of_records, fill = Cyanotoxin)) + 
   geom_bar(stat = "identity") + 
@@ -141,7 +152,7 @@ transparent_main_toxin_producers_MED_plot <- main_toxin_producers_MED_plot +
 ## Main toxin producers in the other Continents, not Mediterranean
 
 ```{r}
-main_toxin_producers_globally <- medcon %>%
+main_toxin_producers_globally <- medcon_clean %>%
   filter(Continent != "Mediterranean") %>% 
   group_by(Cyanotoxin, Species)%>%
   summarize(Number_of_records = n())%>%
@@ -205,85 +216,6 @@ transparent_main_toxin_producers_cont_plot <- main_toxin_producers_cont_plot +
 # ggsave("main_toxin_producers_cont.pdf", bg = "transparent")
 ```
 
-## Produce a single image for the two previous plots
-
-```{r combined, fig.asp= 0.5, fig.width=12}
-med_subset <- head(main_toxin_producers_globally,8) # create subsets
-med_subset$subset <- "Mediterranean"
-
-cont_subset <- head(main_toxin_producers_MED,9)
-cont_subset$subset <- "Rest of World"
-
-med_vs_cont <- rbind(med_subset, cont_subset)
-
-combined <- 
-  ggplot(med_vs_cont, 
-          aes(x = reorder(Species, -Number_of_records), 
-          y = Number_of_records, fill = Cyanotoxin)) + 
-  geom_bar(stat = "identity") + 
-  facet_wrap(~subset) +
-  theme(plot.subtitle = element_text(vjust = 1), 
-    plot.caption = element_text(vjust = 1), 
-    axis.title = element_text(size = 14), 
-    axis.text.x = element_text(size = 12, 
-        vjust = 0.5, angle = 75), plot.title = element_text(size = 15), 
-    panel.background = element_rect(fill = NA), 
-    # legend.background = element_rect(fill = NA, 
-    #     size = 0.1)
-    ) +
-  labs(x = "Species", size = 14) + 
-  # theme(legend.position = "none") +
-  theme(legend.position = "bottom", legend.direction = "horizontal") +
-  coord_flip()  + 
-  theme(axis.text.x = element_text(angle = 0)) + 
-  theme(axis.title = element_text(size = 22),
-        strip.text = element_text(size = 20), 
-    axis.text = element_text(size = 18), 
-    # plot.title = element_text(size = 14), 
-    plot.background = element_rect(colour = NA)) +
-  labs(y = "Number of records", colour = "white") + 
-  theme(panel.grid.major = element_line(colour = NA), 
-    panel.grid.minor = element_line(colour = NA), 
-    panel.background = element_rect(linetype = "solid"), 
-    plot.background = element_rect(linetype = "solid")) +
-  theme(axis.text.y = element_text(face = "italic")) +
-  theme(axis.title = element_text(family = "serif"), 
-    axis.text.y = element_text(family = "serif"), 
-    legend.text = element_text(size = 16, 
-        family = "serif"),
-    strip.text = element_text(family = "serif")) +
-  theme(legend.title = element_text(colour = NA)) +
-  # produce consistent colors across plots
-  scale_fill_manual(values = c("Anatoxin" = "#7fc97f", 
-                               "Saxitoxin" = "#beaed4",
-                               "Cylindrospermopsin" = "#fdc086",
-                               "Microcystin" = "#ffff99"))
-
-combined 
-
-# Produce the plot with white text for the poster
-transparent_combined_plot <- combined +
-  theme(axis.ticks = element_line(colour = "white"), 
-    axis.text = element_text(colour = "white"), 
-    axis.text.x = element_text( 
-        colour = "white"), axis.text.y = element_text(size = 20, 
-        colour = "white")) + theme(axis.line = element_line(colour = "white"), 
-    axis.ticks = element_line(colour = "white"), 
-    axis.title = element_text(colour = "white"), 
-    plot.title = element_text(colour = "white")) + 
-    theme(panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank(),
-        panel.background = element_rect(fill = "transparent",colour = NA),
-        plot.background = element_rect(fill = "transparent",colour = NA),
-        legend.background = element_rect(fill = NA),
-        legend.text = element_text(colour = "white"),
-        strip.background = element_blank(),
-        strip.text = element_text(color = "white")
-        )
-  
-ggsave("med_vs_cont.png", bg = "transparent", dpi = 300)
-```
-
 
 ```{r combined_plot, fig.asp=0.4, fig.width=10}
 # if (!requireNamespace("ggpubr"))
@@ -301,15 +233,15 @@ ggsave("med_vs_cont.png", bg = "transparent", dpi = 300)
 ```
 
 
-## Number of cyanotoxins per species
+## Number of cyanotoxins per species in the Mediterranean region
 
 ```{r}
-cyanotoxin_per_species <- medcon %>%
+cyanotoxin_per_species <- medcon_clean %>%
   filter(Continent == "Mediterranean")%>%
   select(Species, Country, Cyanotoxin)%>%
   group_by(Species, Cyanotoxin)%>%
   summarize(N_toxin = n())%>%
-  arrange(Species, Cyanotoxin)
+  arrange(Species, N_toxin)
 cyanotoxin_per_species
 
 ```
@@ -317,7 +249,7 @@ cyanotoxin_per_species
 ## Cyanotoxins per Species in the World except Mediterranean
 
 ```{r}
-cyanotoxin_per_species <- medcon %>%
+cyanotoxin_per_species <- medcon_clean %>%
   filter(Continent != "Mediterranean")%>%
   select(Species, Country, Cyanotoxin)%>%
   group_by(Species, Cyanotoxin)%>%
@@ -329,7 +261,7 @@ cyanotoxin_per_species
 
 
 ```{r}
-medcon %>% 
+medcon_clean %>% 
   filter(Continent == "Mediterranean") %>% 
   select(Species) %>% 
   group_by(Species) %>% 
@@ -339,12 +271,14 @@ medcon %>%
 
 
 ```{r}
-med_country_cyanotox <- medcon %>% 
+med_country_cyanotox <- medcon_clean %>% 
   filter(Continent == "Mediterranean")%>%
   select(Species, Country,Cyanotoxin)%>%
   group_by(Species, Cyanotoxin)%>%
-  arrange(Cyanotoxin)
+    arrange(Species)
 med_country_cyanotox
+
+ggplot(med_country_cyanotox, aes(Country, y= Species)) + geom_bar(stat = "identity")
 
 ```
 
@@ -535,6 +469,90 @@ medcon %>%
         plot.background = element_rect(fill = "transparent",colour = NA),
         legend.background = element_rect(fill = NA)
         )
+```
+
+```{r}
+
+```
+
+## Produce a single image for the two previous plots
+
+```{r combined, fig.asp= 0.5, fig.width=12}
+med_subset <- head(main_toxin_producers_MED,6) # create subsets
+med_subset$subset <- "Mediterranean"
+
+cont_subset <- head(main_toxin_producers_globally,8)
+cont_subset$subset <- "Rest of World"
+
+med_vs_cont <- rbind(med_subset, cont_subset)
+
+combined <- 
+  ggplot(med_vs_cont, 
+          aes(x = reorder(Species, -Number_of_records), 
+          y = Number_of_records, fill = Cyanotoxin)) + 
+  geom_bar(stat = "identity") + 
+  facet_wrap(~subset) +
+  theme(plot.subtitle = element_text(vjust = 1), 
+    plot.caption = element_text(vjust = 1), 
+    axis.title = element_text(size = 14), 
+    axis.text.x = element_text(size = 12, 
+        vjust = 0.5, angle = 75), plot.title = element_text(size = 15), 
+    panel.background = element_rect(fill = NA), 
+    # legend.background = element_rect(fill = NA, 
+    #     size = 0.1)
+    ) +
+  labs(x = "Species", size = 14) + 
+  # theme(legend.position = "none") +
+  theme(legend.position = "bottom", legend.direction = "horizontal") +
+  coord_flip()  + 
+  theme(axis.text.x = element_text(angle = 0)) + 
+  theme(axis.title = element_text(size = 22),
+        strip.text = element_text(size = 20), 
+    axis.text = element_text(size = 18), 
+    # plot.title = element_text(size = 14), 
+    plot.background = element_rect(colour = NA)) +
+  labs(y = "Number of records", colour = "white") + 
+  theme(panel.grid.major = element_line(colour = NA), 
+    panel.grid.minor = element_line(colour = NA), 
+    panel.background = element_rect(linetype = "solid"), 
+    plot.background = element_rect(linetype = "solid")) +
+  theme(axis.text.y = element_text(face = "italic")) +
+  theme(axis.title = element_text(family = "serif"), 
+    axis.text.y = element_text(family = "serif"), 
+    legend.text = element_text(size = 16, 
+        family = "serif"),
+    strip.text = element_text(family = "serif")) +
+  theme(legend.title = element_text(colour = NA)) +
+  # produce consistent colors across plots
+  scale_fill_manual(values = c("Anatoxin" = "#7fc97f", 
+                               "Saxitoxin" = "#beaed4",
+                               "Cylindrospermopsin" = "#fdc086",
+                               "Microcystin" = "#ffff99"))
+
+#combined 
+
+# Produce the plot with white text for the poster
+transparent_combined_plot <- combined +
+  theme(axis.ticks = element_line(colour = "white"), 
+    axis.text = element_text(colour = "white"), 
+    axis.text.x = element_text( 
+        colour = "white"), axis.text.y = element_text(size = 20, 
+        colour = "white")) + theme(axis.line = element_line(colour = "white"), 
+    axis.ticks = element_line(colour = "white"), 
+    axis.title = element_text(colour = "white"), 
+    plot.title = element_text(colour = "white")) + 
+    theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_rect(fill = "transparent",colour = NA),
+        plot.background = element_rect(fill = "transparent",colour = NA),
+        legend.background = element_rect(fill = NA),
+        legend.text = element_text(colour = "white"),
+        strip.background = element_blank(),
+        strip.text = element_text(color = "white")
+        )
+transparent_combined_plot
+  
+ggsave("med_vs_cont.png", bg = "transparent", dpi = 300)
 ```
 
 
